--- a/appcrud/src/app/paginas/cliente/cliente.page.html
+++ b/appcrud/src/app/paginas/cliente/cliente.page.html
@@ -1,9 +1,16 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>cliente</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Página de Cliente</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item-sliding *ngFor="let cliente of clientes">
+      <ion-item-options>
+        <ion-item-option color="danger" (click)="remover(cliente.id)">Excluir</ion-item-option>
+      </ion-item-options>
+    <ion-item>{{cliente.nome}}</ion-item>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
