--- a/appcrud/src/app/paginas/cliente/cliente.page.html
+++ b/appcrud/src/app/paginas/cliente/cliente.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-button slot="end" (click)="novoCliente()">Novo Cliente</ion-button>
     <ion-title>Página de Cliente</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,6 +10,7 @@
     <ion-item-sliding *ngFor="let cliente of clientes">
       <ion-item-options>
         <ion-item-option color="danger" (click)="remover(cliente.id)">Excluir</ion-item-option>
+        <ion-item-option color="success" (click)="atualizar(cliente)">Editar</ion-item-option>
       </ion-item-options>
     <ion-item>{{cliente.nome}}</ion-item>
     </ion-item-sliding>
