--- a/appcrud/src/app/paginas/produto/produto.page.html
+++ b/appcrud/src/app/paginas/produto/produto.page.html
@@ -1,9 +1,11 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>produto</ion-title>
+  <ion-toolbar color="success">
+    <ion-title>Página de Produto</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item *ngFor="let produto of produtos">{{produto.descricao}}</ion-item>
+  </ion-list>
 </ion-content>
