--- a/appcrud/src/app/paginas/produto/produto.page.html
+++ b/appcrud/src/app/paginas/produto/produto.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar color="success">
+    <ion-button slot="end" (click)="novoProduto()">Novo Produto</ion-button>
     <ion-title>Página de Produto</ion-title>
   </ion-toolbar>
 </ion-header>
