--- a/appcrud/src/app/paginas/produto/produto.page.html
+++ b/appcrud/src/app/paginas/produto/produto.page.html
@@ -10,6 +10,7 @@
     <ion-item-sliding *ngFor="let produto of produtos">
       <ion-item-options>
         <ion-item-option color="danger" (click)="remover(produto.id)">Excluir</ion-item-option>
+        <ion-item-opion color="success" (click)="atualizar(produto)">Editar</ion-item-opion>
       </ion-item-options>
       <ion-item>{{produto.descricao}}</ion-item>
     </ion-item-sliding>
