--- a/appcrud/src/app/paginas/modal-produto/modal-produto.page.html
+++ b/appcrud/src/app/paginas/modal-produto/modal-produto.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="success">
     <ion-button slot="end" (click)="fecharModal()">Fechar</ion-button>
-    <ion-title>{{atualizar ? 'Editar Produto' : 'Cadastrar Produto'</ion-title>
+    <ion-title>'Cadastrar Produto'</ion-title>
   </ion-toolbar>
 </ion-header>
 
