--- a/appcrud/src/app/paginas/home/home.page.html
+++ b/appcrud/src/app/paginas/home/home.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>home</ion-title>
+    <ion-title>Cardápio Digital</ion-title>
+    <ion-menu-button slot="start"></ion-menu-button>
   </ion-toolbar>
 </ion-header>
 
