--- a/appcrud/src/app/paginas/home/home.page.html
+++ b/appcrud/src/app/paginas/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Cardápio Digital</ion-title>
+    <ion-title style="text-align: center;">Cardápio Digital</ion-title>
     <ion-menu-button slot="start"></ion-menu-button>
   </ion-toolbar>
 </ion-header>
@@ -11,8 +11,8 @@
     <ion-card-content>
       <ion-card-title style="text-align: center;">App CRUD</ion-card-title>
     <br>
-    <p style="text-align: justify;">O App CRUD oferece uma maneira
-      revolucionária de gestão dos seus clientes e produtos.</p>
+    <p style="text-align: justify;">O Cardápio Digital oferece uma maneira
+      revolucionária de matar sua fome.</p>
     </ion-card-content>
   </ion-card>
 </ion-content>
