--- a/appcrud/src/app/paginas/home/home.page.html
+++ b/appcrud/src/app/paginas/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title style="text-align: center;">Cardápio Digital</ion-title>
+    <ion-title style="text-align: center;">MENU</ion-title>
     <ion-menu-button slot="start"></ion-menu-button>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,9 @@
   <ion-card>
     <ion-img src="../assets/imagem-home.png"></ion-img>
     <ion-card-content>
-      <ion-card-title style="text-align: center;">App CRUD</ion-card-title>
+      <ion-card-title style="text-align: center;">Aqui, a sua fome é a nossa parceira!</ion-card-title>
     <br>
-    <p style="text-align: justify;">O Cardápio Digital oferece uma maneira
+    <p style="text-align: center;">O Cardápio Digital oferece uma maneira
       revolucionária de matar sua fome.</p>
     </ion-card-content>
   </ion-card>
