--- a/appcrud/src/app/app.component.html
+++ b/appcrud/src/app/app.component.html
@@ -13,7 +13,14 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
-
+        <ion-list>
+          <ion-item *ngFor="let item of items">
+            
+              <ion-img src="../assets/imagem-1"></ion-img>
+            
+            
+          </ion-item>
+        </ion-list>
         <ion-list id="labels-list">
           <ion-list-header></ion-list-header>
 
